WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93635
[BlackBerry] Export InRegionScroller to fix build
https://bugs.webkit.org/show_bug.cgi?id=93635
Summary
[BlackBerry] Export InRegionScroller to fix build
Leo Yang
Reported
2012-08-09 11:44:11 PDT
InRegionScroller is designed as API, but the symbols of it aren't exported.
Attachments
Patch
(1.72 KB, patch)
2012-08-09 11:47 PDT
,
Leo Yang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Leo Yang
Comment 1
2012-08-09 11:47:51 PDT
Created
attachment 157503
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-09 13:10:58 PDT
Comment on
attachment 157503
[details]
Patch Rejecting
attachment 157503
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/PerformanceTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13454962
WebKit Review Bot
Comment 3
2012-08-09 14:57:12 PDT
Comment on
attachment 157503
[details]
Patch Clearing flags on attachment: 157503 Committed
r125207
: <
http://trac.webkit.org/changeset/125207
>
WebKit Review Bot
Comment 4
2012-08-09 14:57:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug