[BlackBerry] Export InRegionScroller to fix build https://bugs.webkit.org/show_bug.cgi?id=93635

Patch by Leo Yang <leoyang@rim.com> on 2012-08-09
Reviewed by Antonio Gomes.

Build fix.

* Api/InRegionScroller.h:

Canonical link: https://commits.webkit.org/111496@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125207 268f45cc-cd09-0410-ab3c-d52691b4dbfc